--- a/manifest.json
+++ b/manifest.json
@@ -22,8 +22,6 @@
     "default_title": "Lovable Chat Exporter"
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "128": "icon128.png"
   }
 }
